Fix source code horizontal scrolling

--- a/assets/scss/_syntax.scss
+++ b/assets/scss/_syntax.scss
@@ -20,11 +20,12 @@
     color: var(--text) !important;
     border-radius: 4px;
     max-width: 100%;
-    overflow-x: auto;
+    overflow-x: scroll;
   }
 
   table {
     display: grid;
+    overflow: unset;
   }
 
   .lntd {
